# MpRpc

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpcheader.pb.cc  mprpcprovider.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  mprpcheader.pb.h  mprpcprovider.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
